[TMP]project-nexus: lavender: redirect to download links from notes

--- a/docs/notes/lavender/v9.4.md
+++ b/docs/notes/lavender/v9.4.md
@@ -27,4 +27,4 @@ sidebar_position: 2
 
 ### Download ###
 
-Please move to [Downloads section](../../download/lavender/latest)
+Please move to [Downloads section](../../download/lavender/v9.4)
